--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -452,6 +452,19 @@ button:focus {
 .custom-nav .navbar-brand.logo img {
   height: 28px;
 }
+@media (max-width: 768px) {
+  /* Adjust styles for small screens here */
+  .navbar-brand h1 {
+      font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 576px) {
+  /* Adjust styles for extra small screens here */
+  .navbar-brand h1 {
+      font-size: 1.2rem;
+  }
+}
 
 @media (max-width: 768px) {
   .custom-nav {
